--- a/carteiraDigital/Pages/Index.razor
+++ b/carteiraDigital/Pages/Index.razor
@@ -1,27 +1,37 @@
 ﻿@page "/"
 @inject DadosCarteira dados
-@* LISTA DE CARTEIRAS NÃO FUNCIONANDO *@
-<PageTitle>Carteira</PageTitle>
+@inject NavigationManager nav
 
-<div class="container">
-    <h1>Bem vindo!</h1>
-    <h2>Cadastre uma carteira digital:</h2>
+<PageTitle>Carteira</PageTitle>
+<TopBar titulo="Cadastre sua conta"/>
+
+<div class="container mx-auto">
     <div class="form">
+
         <div class="nome">
             <label>Nome do proprietário</label>
             <input type="text" @bind=nomeDono>
         </div>
+
         <div class="cpf">
             <label>CPF do proprietário</label>
             <input type="text" @bind=cpfDono>
         </div>
+
         <div class="deposito-inicial">
             <label>Depósito inicial</label>
             <input type="number" @bind=depositoValor>
         </div>
     
         <button id="btn-cadastro" class="btn btn-primary" @onclick="CriarConta">Cadastrar</button>
-        <p>@response</p>
+        <button id="btn-contas" class="btn btn-primary" @onclick='() => nav.NavigateTo("/contas")'>Contas</button>
+
+        @if(erro != true) {
+            <p style="color: black">@response</p>
+        } else {
+            <p style="color: red">@response</p>
+        }
+        
     </div>
 
 </div>
@@ -33,6 +43,15 @@
     private int numeroConta;
     private string response = "";
 
+    public bool erro = false;
+
+    /*
+     *
+     * Cria a conta da carteira digital. 
+     * 
+     * @return string response
+     * 
+     */
     private void CriarConta()
     {
 
@@ -52,10 +71,13 @@
             if (depositoInicial)
             {
                 dados.ListaDados.Add(novaConta);
-                Console.WriteLine(dados.ListaDados[numeroConta - 1].Dono);
-                Console.WriteLine(dados.ListaDados[numeroConta - 1].Numero);
-                Console.WriteLine(dados.ListaDados[numeroConta - 1].Saldo);
-                Console.WriteLine(dados.ListaDados[numeroConta - 1].Limite);
+                
+                Console.WriteLine($"Nome: " + dados.ListaDados[numeroConta - 1].Dono);
+                Console.WriteLine($"Numero: " + dados.ListaDados[numeroConta - 1].Numero);
+                Console.WriteLine($"Saldo: " + dados.ListaDados[numeroConta - 1].Saldo);
+                Console.WriteLine($"Limite: "+dados.ListaDados[numeroConta - 1].Limite);
+                Console.WriteLine($"CPF: " + dados.ListaDados[numeroConta - 1].CPF);
+
                 response = $"Conta criada com sucesso (Numero: {numeroConta}; Nome: {nomeDono}; Saldo: {depositoValor})";
 
                 nomeDono = "";
@@ -64,24 +86,24 @@
         } 
         else
         {
-            response = $"Falha ao criar conta digital. Valor do depósito deve ser maior que R$0,00!";    
+            erro = true;
+            response = $"Falha ao criar conta digital. Verifique as informações novamente.";    
         }
 
     }
 }
 
 <style>
-    #btn-cadastro {
-        margin-top: 2rem;
+    .form{
+        margin-top:5rem;
+    }
+    #btn-cadastro, #btn-contas {
+        margin: 2rem 0;
+        border-top: 0;
+        border-right: 0;
+        border-radius: 6px;
     }
     input, label{
-        display: inline-block;
-    }
-    input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0; 
-    }
-    input[type=number] {
-        -moz-appearance:textfield; /* Firefox */
+        display: block;
     }
 </style>
