--- a/carteiraDigital/Pages/Painel.razor
+++ b/carteiraDigital/Pages/Painel.razor
@@ -38,7 +38,11 @@
         {
             case 1:
                 <Transferencia Conta=@carteira/>
-            break;
+                break;
+
+            case 2:
+                <Deposito Conta="@carteira"/>
+                break;
         }
 
 
