--- a/carteiraDigital/wwwroot/css/app.css
+++ b/carteiraDigital/wwwroot/css/app.css
@@ -1,5 +1,10 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+.msg-erro{
+    color: red;
+    font-weight: 600;
+}
+
 .container {
     padding-top: 5rem;
 }
