--- a/carteiraDigital/Shared/Transferencia.razor
+++ b/carteiraDigital/Shared/Transferencia.razor
@@ -12,7 +12,7 @@
         @if(confirmaCPF == true)
         {
             <label>3 primeiro dígitos CPF</label>
-            <input type="text" @bind=digitosCPF>
+            <input type="text" maxlength="3" @bind=digitosCPF>
         }
 
     </div>
